@@ -12,8 +12,8 @@ reload_in_root_terminal="${APT_NOTIFIER_CONFIG_ITEMS[reload_in_root_terminal]}"
 allow_passwordless_reload_in_user_terminal="${APT_NOTIFIER_CONFIG_ITEMS[allow_passwordless_reload_in_user_terminal]}"
 
 check_authenticator() {
-    local authenticator 
-    
+    local authenticator
+
     # check pkexec is available
     if which pkexec > /dev/null; then
         # check users polkit agent is running
@@ -25,8 +25,8 @@ check_authenticator() {
              [ "$allow_passwordless_reload_in_user_terminal" = "true" ]; then
              authenticator=pkexec
         fi
-    fi    
-    
+    fi
+
     if [ -z "$authenticator" ] &&  test -x /usr/bin/gksu; then
        authenticator=/usr/bin/gksu
     else
@@ -49,7 +49,7 @@ if [ "$(id -u)"  != "0" ]; then
         RUN="/usr/lib/apt-notifier/actions/updater_reload_action run"
         $RUN
         exit $?
-    fi  
+    fi
 else
     RUN="/usr/lib/apt-notifier/actions/updater_reload"
 fi
@@ -70,7 +70,8 @@ TITLE="${UPDATER}: $RELOAD"
 RUN=/usr/lib/apt-notifier/actions/updater_reload_action
 #MSG="apt-get update"
 #MSG="$RELOAD"
-MSG="$TITLE"
+#MSG="$TITLE"
+MSG=""
 updater_show  "$MSG" "$RUN" "$TITLE" "$ICON" "$ICON_KDE"
 
 exit
