@@ -71,10 +71,10 @@ else
     RUN=/usr/lib/apt-notifier/actions/updater_full-upgrade_action
 fi
 
-#MSG="$UPGRADE"
+#MSG="$TITLE"
+MSG="$UPGRADE"
 
 TITLE="${UPDATER}: $UPGRADE"
-MSG="$TITLE"
 
 updater_show  "$MSG" "$RUN" "$TITLE" "$ICON" "$ICON_KDE"
 
