@@ -1,8 +1,10 @@
 apt-notifier (22.07.01mx21) mx; urgency=medium
 
-  * add nala support
   * enhance sanity check of config items
-  * support alternative icon sets
+  * remove double notification after Esc
+  * speedup counting of upgradable packages
+  * support alternative icon sets in config items
+  * allow use of nala with default disabled autoremove 
 
  -- fehlix <fehlix@mxlinux.org>  Fri, 08 Jul 2022 17:02:59 -0400
 
